RESOLVED FIXED 255446
[css-nesting] Fix setSelectorText() to overwrite both the selector text and the original selector text
https://bugs.webkit.org/show_bug.cgi?id=255446
Summary [css-nesting] Fix setSelectorText() to overwrite both the selector text and t...
Matthieu Dubet
Reported 2023-04-14 03:37:27 PDT
Currently, the original selector text is not overwritten, thus displaying wrong content with CSSOM cssText() https://github.com/WebKit/WebKit/blob/main/LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/cssom-expected.txt#L11
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-14 03:37:45 PDT
Matthieu Dubet
Comment 2 2023-04-14 03:43:55 PDT
EWS
Comment 3 2023-04-14 07:04:54 PDT
Committed 262961@main (fdf42acd549d): <https://commits.webkit.org/262961@main> Reviewed commits have been landed. Closing PR #12738 and removing active labels.
EWS
Comment 4 2023-04-20 16:46:27 PDT
Committed 259548.664@safari-7615-branch (250c4928b0b6): <https://commits.webkit.org/259548.664@safari-7615-branch> Reviewed commits have been landed. Closing PR #554 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.