Cherry-pick fdf42acd549d. rdar://problem/108041191

Fix setSelectorText() to overwrite both selector and original selector
    https://bugs.webkit.org/show_bug.cgi?id=255446
    rdar://108041191

    Reviewed by Antti Koivisto.

    Before this patch, only the StyleRule selector was overwritten:
    selector matching was correct but CSSOM cssText() displayed the wrong selector.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/cssom-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/cssom.html:
    * Source/WebCore/css/CSSStyleRule.cpp:
    (WebCore::CSSStyleRule::setSelectorText):
    * Source/WebCore/css/StyleRule.h:
    (WebCore::StyleRuleWithNesting::wrapperAdoptOriginalSelectorList):

    Canonical link: https://commits.webkit.org/262961@main

Identifier: 259548.652@safari-7615-branch