Source/WebCore/css/StyleRule.h
@@ -163,6 +163,7 @@ public:
     const Vector<Ref<StyleRuleBase>>& nestedRules() const { return m_nestedRules; }
     Vector<Ref<StyleRuleBase>>& nestedRules() { return m_nestedRules; }
     const CSSSelectorList& originalSelectorList() const { return m_originalSelectorList; }
+    void wrapperAdoptOriginalSelectorList(CSSSelectorList&&);
 
 protected:
     StyleRuleWithNesting(const StyleRuleWithNesting&);
@@ -426,6 +427,12 @@ inline void StyleRule::wrapperAdoptSelectorList(CSSSelectorList&& selectors)
 #if ENABLE(CSS_SELECTOR_JIT)
     m_compiledSelectors = nullptr;
 #endif
+}
+
+inline void StyleRuleWithNesting::wrapperAdoptOriginalSelectorList(CSSSelectorList&& selectors)
+{
+    m_originalSelectorList = CSSSelectorList { selectors };
+    StyleRule::wrapperAdoptSelectorList(WTFMove(selectors));
 }
 
 #if ENABLE(CSS_SELECTOR_JIT)
